--- a/src/components/Calendar/index.scss
+++ b/src/components/Calendar/index.scss
@@ -1,17 +1,33 @@
-.schedule{
-display: flex;
-
+.schedule {
+  display: flex;
 }
-.calendar{
-display: flex;
-    width: 85%;
-
-
+.calendar {
+  display: flex;
+  width: 85%;
 }
-.shop-cart{
-    padding-top: 10px;
+.shop-cart {
+  padding-top: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-family: Lato;
+  flex-grow: 1;
+}
+.paper {
     display: flex;
-    text-align: center;
-    font-family: Lato;
-    flex-grow: 1;
+    margin-top: 10px;
+  height: 60px;
+  width: 90%;
+  background-color: #D4A8FF !important;
+  align-items: center;
+  justify-content: center;
+}
+.text {
+  border-bottom: 1px solid;
+}
+.chujec{
+    background-color: red;
 }
