--- a/src/components/TopBar/index.scss
+++ b/src/components/TopBar/index.scss
@@ -47,6 +47,9 @@
       flex-grow: 1.5;
     }
   }
+  &__menu{
+margin-top: 25px;
+  }
 }
 @media only screen and (max-width: 670px) {
   .top-bar {
