--- a/src/components/Transfer/index.scss
+++ b/src/components/Transfer/index.scss
@@ -1,16 +1,38 @@
-.wrapper{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    height: 80vh;
+.wrapper {
+  display: flex;
+
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
 
-.transfer{
-    display: flex;
-    width: 80%;
-    height: 70%;
-    background-color: purple;
-    align-items: center;
-    justify-content: center;
+.transfer {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  height: 70%;
+  padding-top: 40px;
+  background: rgba(255, 220, 97, 0.48);
+  border: 1px solid #000000;
+  justify-content: center;
+  &__text {
+    font-family: Lato;
+    font-size: 50px;
+  }
+  &__input{
+    width: 300px;
+    height: 45px;  
+    background: #D7A700;
+  }
+  &__give{
+      flex-grow: 1;
+  }
+  &__recieve{
+    flex-grow: 1;
+}
+&__proposition{
+    flex-grow: 4;
+}
+&__add{
+}
 }
