--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,9 @@ body {
     margin: 0px;
     padding: 0px;
   }
+  body::-webkit-scrollbar {
+    display: none;
+  }
   .wraper{
     display: flex;
     &__rightbar{
