--- a/src/components/RightBar/index.scss
+++ b/src/components/RightBar/index.scss
@@ -1,4 +1,4 @@
-.shop-cart {
+.right-bar {
     padding-top: 10px;
     padding-left: 15px;
     padding-right: 15px;
@@ -7,8 +7,8 @@
     align-items: center;
     text-align: center;
     font-family: Lato;
-  }
-  .text {
-    border-bottom: 1px solid;
-  }
+    &__text {
+      border-bottom: 1px solid;
+    }
   
+  }
