--- a/src/components/RightBar/index.scss
+++ b/src/components/RightBar/index.scss
@@ -2,13 +2,13 @@
     padding-top: 10px;
     padding-left: 15px;
     padding-right: 15px;
-    display: flex;
-    flex-direction: column;
     align-items: center;
     text-align: center;
     font-family: Lato;
     &__text {
       border-bottom: 1px solid;
     }
-  
+    height:85vh;
+    overflow-y: scroll;
+
   }
