--- a/src/components/Transfer/index.scss
+++ b/src/components/Transfer/index.scss
@@ -45,9 +45,9 @@
 
   }
   input:focus {
-    -webkit-box-shadow: 0px 0px 18px 8px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 18px 8px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 18px 8px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 18px 8px #ffae00;
+    -moz-box-shadow: 0px 0px 18px 8px #ffae00;
+    box-shadow: 0px 0px 18px 8px #ffae00;
     
   }
 }
