--- a/src/components/Transfer/index.scss
+++ b/src/components/Transfer/index.scss
@@ -15,7 +15,7 @@
   background: rgba(255, 220, 97, 0.6);
 
   border: 3px solid #000000;
-  border-radius: 5% 5% 5% 5% / 5% 5% 5% 5%;
+  border-radius: 15px;
   text-transform: uppercase;
   letter-spacing: 0.3ch;
 
