--- a/src/components/TopBar/index.scss
+++ b/src/components/TopBar/index.scss
@@ -24,12 +24,12 @@
     &-div {
       width: 70%;
       display: flex;
-      align-items: center;
       flex-grow: 3;
     }
 
     &-field {
       width: 96%;
+      margin-top: 10px;
     }
 
     &-icon {
