A lot of stuff to refactor, have fun

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,9 @@ body {
   }
   .wraper{
     display: flex;
-    &__calendar{
-      width: 85%;
+    &__rightbar{
+      width: 80%;
     }
+
   }
 
