--- a/src/components/RightBar/index.scss
+++ b/src/components/RightBar/index.scss
@@ -4,10 +4,28 @@
     padding-right: 15px;
     text-align: center;
     font-family: Lato;
+    width: 300px;
     &__text {
       border-bottom: 1px solid;
     }
     height:85vh;
     overflow-y: scroll;
-
   }
+  .right-bar::-webkit-scrollbar-track
+{
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+.right-bar::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+.right-bar::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    background-color: #d4b851;
+    border: 1px solid;
+}
