--- a/src/components/TopBar/Results/index.scss
+++ b/src/components/TopBar/Results/index.scss
@@ -2,8 +2,10 @@
   position: relative;
   z-index: 10;
   padding: 5px;
+  padding-left: 20px;
   background-color: #e6c759;
   font-size: 18px;
+  font-family: Lato;
 }
 .lecture:hover{
   background-color: #d4b851;
@@ -19,3 +21,4 @@
 .top-bar__input-field {
   width: 100%;
 }
+
