--- a/src/components/Transfer/index.scss
+++ b/src/components/Transfer/index.scss
@@ -3,51 +3,67 @@
   justify-content: center;
   text-align: center;
   align-items: center;
-
 }
 
 .transfer {
   display: flex;
-  outline:none;
-  width: 80%;
+  
+  flex-direction: row;
+
+  outline: none;
+  min-width: 35%;
   height: 70%;
   padding-top: 40px;
-  background: rgba(255, 220, 97, 0.6);
+  background: #006b96;
+  box-shadow: 0px 0px 0px 4px #006b96;
+  border: 4px solid #ffc400;
+  margin: 0 auto;
+  border-top-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 
-  border: 3px solid #000000;
-  border-radius: 15px;
   text-transform: uppercase;
   letter-spacing: 0.3ch;
 
-  &__left {
-    display: flex;
-    justify-content: space-around;
+  &__give {
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  &__right {
-    flex-grow: 4;
+  &__receive {
+    flex-grow: 1;
   }
   &__text {
     font-family: Lato;
-    font-size: 50px;
+    font-size: 30px;
     margin-bottom: 10px;
   }
   &__input {
-    width: 300px;
-    height: 45px;
+    width: 250px;
+    height: 25px;
     background: #ffc400;
-    outline:none;
+    outline: none;
     border: 1px solid;
-    border-radius: 22px ;
+    border-radius: 10px;
     padding: 10px;
     font-size: 24px;
     transition-duration: 0.3s;
-
   }
-  input:focus {
-    -webkit-box-shadow: 0px 0px 18px 8px #ffae00;
-    -moz-box-shadow: 0px 0px 18px 8px #ffae00;
-    box-shadow: 0px 0px 18px 8px #ffae00;
-    
+  &__input:focus {
+    -webkit-box-shadow: 0px 0px 34px 1px #ffae00;
+    -moz-box-shadow: 0px 0px 34px 1px #ffae00;
+    box-shadow: 0px 0px 34px 1px #ffae00;
+  }
+  &__input2 {
+    width: 250px;
+    height: 25px;
+    padding: 10px;
+    font-size: 24px;
+    transition-duration: 0.3s;
+  }
+  input::placeholder{
+    color: black;
+    font-weight: bold;
+    text-align: center;
   }
 }
