--- a/src/components/TopBar/Results/index.scss
+++ b/src/components/TopBar/Results/index.scss
@@ -1,4 +1,4 @@
-.lecture {
+.course {
   position: relative;
   z-index: 10;
   padding: 5px;
@@ -7,7 +7,7 @@
   font-size: 18px;
   font-family: Lato;
 }
-.lecture:hover{
+.course:hover {
   background-color: #d4b851;
   cursor: pointer;
 }
@@ -21,4 +21,3 @@
 .top-bar__input-field {
   width: 100%;
 }
-
